// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`method default value 1`] = `
"Test(a: number, b: string = \\"\\") {
  return a.toString() + b;
}"
`;

exports[`method template param 1`] = `
"Test<S>(a: number) {
  return a.toString() + b;
}"
`;

exports[`method to class method 1`] = `
"Test(a: number, b: string) {
  return a.toString() + b;
}"
`;
